# streamlit-demo

./: .gitignore  amazon.ipynb  app.py  pyproject.toml  user_management.db  user_usage.db
chroma/: chroma.sqlite3
embedding/chroma/4e658fa7-8924-4fd6-b674-73d0bdd7fbbc/: index_metadata.pickle
