[tool.poetry]
name = "streamlit-demo"
version = "0.1.0"
description = ""
authors = ["AEJaspan <adam.jaspan@googlemail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.41.1"
apify-client = "^1.8.1"
langchain = "^0.3.13"
python-dotenv = "^1.0.1"
langchain-openai = "^0.2.14"
langchain-community = "^0.3.13"
chromadb = "^0.6.0"
pysqlite3-binary = "^0.5.4"
streamlit-cookies-manager = "^0.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
